# zupply-zkp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Untitled Document 1  out.txt  output.txt
benchmark_data/BN128/: benchmark_output.json  benchmark_output_part1.json  benchmark_output_part2.json  benchmark_output_part2_missing_parts.json
benchmark_data/BN128/csv_files/: BM_PROVER_LIBIOP_Auth.csv  BM_PROVER_LIBIOP_Div.csv  BM_PROVER_LIBIOP_Merge.csv  BM_PROVER_LIBIOP_Trans.csv  BM_PROVER_LIBSNARK_Auth.csv  BM_PROVER_LIBSNARK_Div.csv  BM_PROVER_LIBSNARK_Merge.csv  BM_PROVER_LIBSNARK_Trans.csv  BM_VERIFIER_LIBIOP_Auth.csv  BM_VERIFIER_LIBIOP_Div.csv  BM_VERIFIER_LIBIOP_Merge.csv  BM_VERIFIER_LIBIOP_Trans.csv  BM_VERIFIER_LIBSNARK_Auth.csv  BM_VERIFIER_LIBSNARK_Div.csv  BM_VERIFIER_LIBSNARK_Merge.csv  BM_VERIFIER_LIBSNARK_Trans.csv  LIBIOP-Proof_size_Auth.csv  LIBIOP-Proof_size_Div.csv  LIBIOP-Proof_size_Merge.csv  LIBIOP-Proof_size_Trans.csv  LIBIOP-num_constraints_Auth.csv  LIBIOP-num_constraints_Div.csv  LIBIOP-num_constraints_Merge.csv  LIBIOP-num_constraints_Trans.csv  LIBSNARK-Proof_size_Div.csv  LIBSNARK-num_constraints_Auth.csv  LIBSNARK-num_constraints_Div.csv  LIBSNARK-num_constraints_Merge.csv  LIBSNARK-num_constraints_Trans.csv
depends/: CMakeLists.txt
pp/: README.md
pp/AuthCircuit/: proof.dec  vk.dec
pp/DivCircuit/: proof.dec  vk.dec
pp/MergeCircuit/: proof.dec  vk.dec
pp/TransCircuit/: proof (copy).dec  proof.dec  vk.dec
src/: CMakeLists.txt  benchmark.cpp  circuit.hpp  circuit.tcc  main.cpp  main2.cpp  main3.cpp  main4.cpp  my_merkle_tree_check_read_gadget.hpp  my_merkle_tree_check_read_gadget.tcc  plot_benchmark.py  utils.hpp  utils.tcc
src/merkle_tree/: merkle_tree_check_read_gadget.hpp  merkle_tree_check_read_gadget.tcc
src/np_circuits/: auth_circuit.tcc  circuit.hpp  div_circuit.tcc  merge_circuit.tcc  trans_circuit.tcc
src/sha256_gen/: generate_mht.py
src/smart_contract/: Readme.md  Zupply.sol  generate_sha256_gadget_tests.py  merkle_tree_algorithm.py
src/smart_contract/python_files/: generate_sha256_gadget_tests.py
